test/libsolidity/syntaxTests/experimental/parsing/forall_free_function_no_parentheses_no_type_var.sol
pragma experimental solidity;

forall
function f() {}
// ====
// EVMVersion: >=constantinople
// ----
// ParserError 2314: (38-46): Expected '(' but got 'function'
